--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/node": "^18.11.18",
+    "@types/react-router-dom": "^5.3.3",
     "@types/socket.io": "^3.0.2",
     "axios": "^1.1.3",
     "react": "^18.2.0",
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.26",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
